# time-lapse-creator

./: .gitignore  README.md  main.py  main_qt.py  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  build-release.yml
scripts/: build.py  build_mac.sh  build_windows.ps1
src/timelapse_creator/: __init__.py  app.py  app_qt.py  overlay.py  recorder.py  theme.py
